@@ -1,3 +1,11 @@
+S3method(margEff,polywog)
+S3method(plot,polywog)
+S3method(plot,preplot.polywog)
+S3method(predict,polywog)
+S3method(print,polywog)
+S3method(print,summary.polywog)
+S3method(summary,polywog)
+S3method(vcov,polywog)
 export(bootPolywog)
 export(control.bp)
 export(cv.polywog)
@@ -6,12 +14,6 @@ export(polywog)
 export(predVals)
 export(rawpoly)
 importFrom(games,Mode)
+importFrom(matrixStats,rowProds)
 importFrom(stringr,str_split)
 importMethodsFrom(Matrix,colMeans)
-S3method(plot,polywog)
-S3method(plot,preplot.polywog)
-S3method(predict,polywog)
-S3method(print,polywog)
-S3method(print,summary.polywog)
-S3method(summary,polywog)
-S3method(vcov,polywog)
